[gd_scene load_steps=2 format=3 uid="uid://brgi1iv7an7nc"]

[ext_resource type="Script" path="res://scenes/hud.gd" id="1_v04mq"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_v04mq")

[node name="BlueScoreLabel" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.0223958
anchor_top = 0.0222222
anchor_right = 0.0911458
anchor_bottom = 0.0731481
theme_override_colors/font_color = Color(0.301961, 0.396078, 0.705882, 1)
theme_override_colors/font_shadow_color = Color(0.282353, 0.290196, 0.466667, 1)
theme_override_font_sizes/font_size = 40
text = "0"
metadata/_edit_use_anchors_ = true

[node name="PinkScoreLabel" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.108333
anchor_top = 0.0212963
anchor_right = 0.176563
anchor_bottom = 0.0722222
theme_override_colors/font_color = Color(0.764706, 0.141176, 0.329412, 1)
theme_override_colors/font_shadow_color = Color(0.513726, 0.109804, 0.364706, 1)
theme_override_font_sizes/font_size = 40
text = "0"
metadata/_edit_use_anchors_ = true

[node name="StartButton" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.928125
anchor_top = 0.0222222
anchor_right = 0.990625
anchor_bottom = 0.0777778
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Quit game"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
